# musicBoxFactory

./: CLAUDE.md  README.md  main.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-tone-synthesis/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-melody-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-ambient-generation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-mixing-wav-output/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-user-interface/: 05-01-PLAN.md  05-02-PLAN.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/research/: 05-gradio-ui-brainstorm.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: run_ui.py
src/musicboxfactory/: __init__.py  ambient.py  melody.py  mixer.py  synth.py
src/musicboxfactory/ui/: app.py  (+3 more)
tests/: conftest.py  test_ambient.py  test_melody.py  test_mixer.py  test_synth.py  test_ui_api.py
(+3 files in other folders)
