[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicboxfactory"]

[project]
name = "musicboxfactory"
version = "0.1.0"
description = "Music Box Factory is a tool for algorythmic and programatic creation of simple loops for emulation of music boxes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "gradio>=6.11.0",
    "numpy>=2.0",
    "pyfluidsynth>=1.3.4",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
